# rastreio-correios

./: .gitignore  404.html  CNAME  dev-requirements.txt  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: check_and_test.yml  publish.yml
correios/: __init__.py  main.py
correios/entities/: __init__.py  destino.py  endereco.py  evento.py  objeto.py  oec.py  unidade.py
docs/: index.md
docs/funcionalidades/: index.md
funcionalidades/: index.html
scripts/: build.sh  check.sh  format.sh  install.sh  publish.sh  test.sh
search/: search_index.json
tests/: conftest.py  test_busca_cep.py  test_gera_codigo_valido.py  test_match_cep.py  test_rastreio.py
