[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = """
  -v -x -rxXs
  --cov=correios
  --cov-report=xml
  --cov-fail-under=90
  --strict-config
  --strict-markers
"""
testpaths = ["tests"]

# [tool.mypy]
# mypy_path = "app"
# show_error_codes = true
# disallow_untyped_defs = true
# ignore_missing_imports = true
# follow_imports = "skip"
# exclude = "utils/vader/.*"

# check_untyped_defs = true
# disallow_any_generics = true
# no_implicit_optional = true
# strict_equality = true
# warn_redundant_casts = true
# warn_return_any = true
# warn_unreachable = true
# warn_unused_configs = true
# no_implicit_reexport = true

# [[tool.mypy.overrides]]
# module = "tests.*"
# disallow_untyped_defs = False
# check_untyped_defs = True

[tool.isort]
profile = "black"
line_length = 88
force_grid_wrap = 0
multi_line_output = 3
use_parentheses = true
combine_as_imports = true
ensure_newline_before_comments = true
include_trailing_comma = true
known_first_party = ["correios", "tests"]

[tool.black]
line_length = 88
color = true
target_version = ["py38", "py39"]
